src/test/c/accept/39-lambda-with-return.arcx
f = (a: int, b: int) {
    return a + b;
}; 
result = f(1, 2);