src/test/c/reject/32-loop-in-condition.arcx
if (while (a < 10) { a:int=1; }) {
    b:int=2;
} 